# opengl

./: CMakeLists.txt
assets/shaders/: default.frag
include/: game.h  input.h  objects.h  rendering.h  shader.h
src/: game.cpp  input.cpp  objects.cpp  rendering.cpp  shader.cpp
